@@ -1,4 +1,5 @@
 5.0b3 -> 5.0b4:
+    - jbj: fix: calculate clearsign'd text digests correctly.
     - jbj: fix: display RPMRC_NOKEY failures explicitly.
     - jbj: rip --predefine entirely, add comment re macro added both global/CLI.
     - jbj: link tpgp against rpmnsProbeSignature() instead.
